setup home page still need to add animation

--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./CSS/reset.css">
   <link rel="stylesheet" href="./CSS/index.css">
   <link rel="stylesheet" href="./CSS/nav.css">
   <link rel="stylesheet" href="./CSS/footer.css">
   <title>Aaron's Portfolio Site</title>
 </head>
 <body>
-  
+  <div class="Main">
+    <div class="myName"><h1>Aaron Cook</h1>
+    </div>
+    <div class="myTitle"><h1>Web Developer Student</h1></div>
+    <nav class="nav">
+      <ul class="navUL">
+        <div class="about shape hShape" ><a href="about.html"><h2 class="hoverName">About</h2> <h2 class="hoverLetter">A</h2></a></div>
+        <div class="resume shape hShape"><a href="resume.html"><h2 class="hoverName">Resume</h2> <h2 class="hoverLetter">R</h2></a></div>
+        <div class="home shape hShape"><a href="index.html"><h2 class="hoverName">Home</h2> <h2 class="hoverLetter">H</h2></a></div>
+        <div class="portfolio shape hShape"><a href="portfolio.html"><h2 class="hoverName">Portfolio</h2> <h2 class="hoverLetter">P</h2></a></div>
+        <div class="contact shape hShape"><a href="contact.html"><h2 class="hoverName">Contact</h2> <h2 class="hoverLetter">C</h2></a></div>
+      </ul>
+      
+  </nav>
+</div>
 </body>
 </html>
