--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./CSS/reset.css">
   <link rel="stylesheet" href="./CSS/resume.css">
   <link rel="stylesheet" href="./CSS/nav.css">
   <link rel="stylesheet" href="./CSS/footer.css">
