finish desktop animation

--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
   <link rel="stylesheet" href="./CSS/reset.css">
   <link rel="stylesheet" href="./CSS/index.css">
   <link rel="stylesheet" href="./CSS/nav.css">
+  <link rel="stylesheet" href="./CSS/navAnimation_Index.css">
   <link rel="stylesheet" href="./CSS/footer.css">
+  <link rel="stylesheet" href="./CSS/font.css">
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@531&display=swap" rel="stylesheet">
   <title>Aaron's Portfolio Site</title>
 </head>
 <body>
   <div class="Main">
-    <div class="myName"><h1>Aaron Cook</h1>
+    <div class="myName indexFont"><h1 class="nameText">Aaron Cook</h1>
     </div>
-    <div class="myTitle"><h1>Web Developer Student</h1></div>
+    <div class="myTitle indexFont"><h1>Web Developer Student</h1></div>
     <nav class="nav">
       <ul class="navUL">
-        <div class="about shape hShape" ><a href="about.html"><h2 class="hoverName">About</h2> <h2 class="hoverLetter">A</h2></a></div>
-        <div class="resume shape hShape"><a href="resume.html"><h2 class="hoverName">Resume</h2> <h2 class="hoverLetter">R</h2></a></div>
-        <div class="home shape hShape"><a href="index.html"><h2 class="hoverName">Home</h2> <h2 class="hoverLetter">H</h2></a></div>
-        <div class="portfolio shape hShape"><a href="portfolio.html"><h2 class="hoverName">Portfolio</h2> <h2 class="hoverLetter">P</h2></a></div>
-        <div class="contact shape hShape"><a href="contact.html"><h2 class="hoverName">Contact</h2> <h2 class="hoverLetter">C</h2></a></div>
+        <div class="about shape aniOP" ><a href="about.html"><h2 class="hoverName indexFont">About</h2> <h2 class="hoverLetter indexFont">A</h2></a></div>
+        <div class="resume shape aniOP"><a href="resume.html"><h2 class="hoverName indexFont">Resume</h2> <h2 class="hoverLetter indexFont">R</h2></a></div>
+        <div class="home shape "><a href="index.html"><h2 class="hoverName indexFont">Home</h2> <h2 class="hoverLetter indexFont">H</h2></a></div>
+        <div class="portfolio shape aniOP"><a href="portfolio.html"><h2 class="hoverName indexFont">Portfolio</h2> <h2 class="hoverLetter indexFont">P</h2></a></div>
+        <div class="contact shape aniOP"><a href="contact.html"><h2 class="hoverName indexFont">Contact</h2> <h2 class="hoverLetter indexFont">C</h2></a></div>
       </ul>
       
   </nav>
