--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <title>Aaron's Portfolio Site</title>
 </head>
 <body>
-  <div class="Main">
+   <div class="Main">
     <div class="myName indexFont"><h1 class="nameText">Aaron Cook</h1>
     </div>
     <div class="myTitle indexFont"><h1>Web Developer Student</h1></div>
     <nav class="nav">
       <ul class="navUL">
-        <div class="about shape aniOP" ><a href="about.html"><h2 class="hoverName indexFont">About</h2> <h2 class="hoverLetter indexFont">A</h2></a></div>
-        <div class="resume shape aniOP"><a href="resume.html"><h2 class="hoverName indexFont">Resume</h2> <h2 class="hoverLetter indexFont">R</h2></a></div>
-        <div class="home shape "><a href="index.html"><h2 class="hoverName indexFont">Home</h2> <h2 class="hoverLetter indexFont">H</h2></a></div>
-        <div class="portfolio shape aniOP"><a href="portfolio.html"><h2 class="hoverName indexFont">Portfolio</h2> <h2 class="hoverLetter indexFont">P</h2></a></div>
-        <div class="contact shape aniOP"><a href="contact.html"><h2 class="hoverName indexFont">Contact</h2> <h2 class="hoverLetter indexFont">C</h2></a></div>
+        <div class="about shape aniOP" ><a href="about.html"><h2 class="hoverName indexFont">ABOUT</h2> <h2 class="hoverLetter indexFont">A</h2></a></div>
+        <div class="resume shape aniOP"><a href="resume.html"><h2 class="hoverName indexFont">RESUME</h2> <h2 class="hoverLetter indexFont">R</h2></a></div>
+        <div class="home shape "><a href="index.html"><h2 class="hoverName indexFont">HOME</h2> <h2 class="hoverLetter indexFont">H</h2></a></div>
+        <div class="portfolio shape aniOP"><a href="portfolio.html"><h2 class="hoverName indexFont">PORTFOLIO</h2> <h2 class="hoverLetter indexFont">P</h2></a></div>
+        <div class="contact shape aniOP"><a href="contact.html"><h2 class="hoverName indexFont">CONTACT</h2> <h2 class="hoverLetter indexFont">C</h2></a></div>
       </ul>
       
   </nav>
