--- a/resume.html
+++ b/resume.html
@@ -3,12 +3,188 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./CSS/reset.css">
-  <link rel="stylesheet" href="./CSS/resume.css">
   <link rel="stylesheet" href="./CSS/nav.css">
+  <link rel="stylesheet" href="./CSS/hamNAV.css">
+  <link rel="stylesheet" href="./CSS/navRES.css">
   <link rel="stylesheet" href="./CSS/footer.css">
+  <link rel="stylesheet" href="./CSS/font.css"> 
+  <link rel="stylesheet" href="./CSS/resume.css">
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@531&display=swap" rel="stylesheet">
   <title>Aaron's Resume</title>
 </head>
 <body>
+  <main class="container indexFont">
+    <nav class="nav">
+      <ul class="navUL">
+        <div class="home shape "><a href="index.html"><h2 class="hoverName indexFont">HOME</h2> <h2 class="hoverLetter indexFont">H</h2></a></div>
+        <div class="about shape aniOP" ><a href="about.html"><h2 class="hoverName indexFont">ABOUT</h2> <h2 class="hoverLetter indexFont">A</h2></a></div>
+        <div class="resume shape aniOP"><a href="resume.html"><h2 class="hoverName indexFont">RESUME</h2> <h2 class="hoverLetter indexFont">R</h2></a></div>
+        <div class="portfolio shape aniOP"><a href="portfolio.html"><h2 class="hoverName indexFont">PORTFOLIO</h2> <h2 class="hoverLetter indexFont">P</h2></a></div>
+        <div class="contactNAV shape aniOP"><a href="contact.html"><h2 class="hoverName indexFont">CONTACT</h2> <h2 class="hoverLetter indexFont">C</h2></a></div>
+      </ul>  
+  </nav>
+  
+  <nav id="hamnav">
+    <!-- [THE HAMBURGER] -->
+    <label for="hamburger">&#9776;</label>
+    <input type="checkbox" id="hamburger"/>
+  
+    <!-- [MENU ITEMS] -->
+    <div id="hamitems">
+      <a href="./index.html"><h1 class="fontIndex">Home</h1></a>
+      <a href="./about.html"><h1 class="fontIndex">About</h1></a>
+      <a href="./resume.html"><h1 class="fontIndex">Resume</h1></a>
+      <a href="./portfolio.html"><h1 class="fontIndex">Portfolio</h1></a>
+      <a href="./contact.html"><h1 class="fontIndex">Contact</h1></a>
+    </div>
+  </nav>
+
+  <div class="header border1">
+    <div class="Name border2">
+      <H1 class="resName">Aaron H. Cook</H1>
+    </div>
+    <div class="Contact border2">
+      <h2 class="info">Address:<h2>3009 44th St. Lubbock,TX 79413</h2></h2>
+      <h2 class="info">Email:<h2>aaronh.cook@yahoo.com</h2></h2>
+      <h2 class="info">Cell: <h2>(510)672-0782</h2></h2>
+    </div>
+  </div>
+
+  <main class="main border1">
+    <div class="line"></div>
+
+    <div class="summary border2">
+      <p class="sumTitle">SUMMARY</p>
+      <p class="sum">My experience has given me the tools to work under pressure and handle unexpected problems in creative ways. I work well with a team or independently. Always looking for ways to improve and overcome new challenges.
+      </p>
+      <ul class="sumList">
+        <h1>+ Dependable</h1>
+        <h1>+ Integrity</h1>
+        <h1>+ Loyalty</h1>
+        <h1>+ Accountable</h1>
+        <h1>+ Detailed</h1>
+        <h1>+ Motivated</h1>
+      </ul>
+    </div>
+    <div class="experince border2">
+      <p class="expTitle">EXPERIENCE</p>
+      <div class="ramarPro">
+       <ul>
+        <h1>Promotions Coordinator</h1>
+        <h2>Ramar Communications, Lubbock TX</h2>
+        <h2>April 2018 – Present</h2>
+        <h3>+ Schedule news, radio and promotional content for television and air</h3>
+        <h3>+ Maintain spot library</h3>
+        <h3>+ Assist the Production Department on-shoots</h3>
+        <h3>+ Station branding on network commercials</h3>
+        <h3>+ Personal Assistant to management</h3>
+      </ul> 
+      </div>
+
+      <div class="ramarMC">
+        <h1> Master Control Supervisor</h1>
+        <h2> Ramar Communications, Lubbock, TX</h2>
+        <h2>Jan 2015 – April 2018</h2>
+        <h3>+Maintain 38 TV stations</h3>
+        <h3>+ Quality control of stations</h3>
+        <h3>+ Troubleshoot and resolve on/off air issues.</h3>
+        <h3>+ Run live event programming</h3>
+        <h3>+ Ingest and edit commercials and shows for airing</h3>
+        <h3>+ Train and oversee new hires for the department</h3>
+        <h3>+ Master Control Supervisor</h3>
+      </div>
+      
+
+      <div class="mechBank">
+        <h1>Customer Service Representative</h1> 
+        <h2>Mechanics Bank, El Cerrito, CA</h2>
+        <h2>July 2012 – Dec 2014</h2>
+        <h3>+ Teller duties to include customer transactions, cash handling and balancing</h3>
+        <h3>+ Clerical duties</h3>
+        <h3>+ Direct customer relations and correspondence.</h3>
+      </div>
+
+    </div>
+    <div class="education border2">
+      <p class="eduTitle">EDUCATION AND TRAINING</p>
+      <div class="aca">
+        <ul>
+          <h1>Full Stack Developer</h1>
+          <h2>Austin Coding Academy Austin,TX</h2>
+          <h3>Present</h3>
+          <h3>+ HTML</h3>
+          <h3>+ CSS</h3>
+          <h3>+ JS</h3>
+        </ul>
+      </div>
+
+      <div class="video">
+        <ul >
+          <h1>AAS Video Production</h1>
+          <h2>South Plains College Levelland,TX</h2>
+          <h3>2009-2011</h3>
+      </ul>
+        <p>Studied techniques, procedures
+          and operations of equipment used
+          in the video production industry. 
+          This includes training in television
+          and audio production, graphics,
+          lighting and editing.</p>
+      </div> 
+      <div class="sound">
+        <ul >
+          <h1>AAS Sound Technology</h1>
+          <h2>South Plains College Levelland,TX</h2>
+          <h3>2008-2011</h3>
+        </ul>
+        <p> Techniques, procedures and
+            operation of equipment used in
+            the studio recording industry.   
+            This includes training in selection
+            and placement of microphones,
+            analysis of acoustical
+            environments, use of effects,
+            troubleshooting, engineering, and
+            production techniques.</p>
+        </div>
+      </div>
+    </div>
+    <div class="skills border2">
+      <p class="skillTitle">SKILLS</p>
+      <div class="skillFlex">
+      <div class="editing">
+        <h1>Editing</h1>
+          <ul class="editText">
+            <h2>Adobe Premiere</h2>
+            <h2>Edius</h2>
+            <h2>After Effects</h2>
+            <h2>Photoshop</h2>
+          </ul>
+      </div>
+      <div class="tech">
+        <h1>Technolgy</h1>
+          <ul class="techText">
+            <h2>Cameras</h2>
+            <h2>lighting</h2>
+            <h2>Windows/MAC</h2>
+            <h2>MS Office</h2>
+            <h2>Satelite Receivers</h2>
+          </ul>
+      </div>
+      <div class="language">
+        <h1>Languages</h1>
+          <ul class="languageText">
+            <h2>HTML</h2>
+            <h2>CSS</h2>
+            <h2>Java Script</h2>
+          </ul>
+      </div>
+    </div>
+    </div>
+
+  </main>
+  
+  </main>
   
 </body>
 </html>
