--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
   <link rel="stylesheet" href="./CSS/index.css">
   <link rel="stylesheet" href="./CSS/nav.css">
   <link rel="stylesheet" href="./CSS/navAnimation_Index.css">
+  <link rel="stylesheet" href="./CSS/hamNAV.css">
   <link rel="stylesheet" href="./CSS/footer.css">
-  <link rel="stylesheet" href="./CSS/font.css">
+  <link rel="stylesheet" href="./CSS/font.css">  
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@531&display=swap" rel="stylesheet">
   <title>Aaron's Portfolio Site</title>
 </head>
 <body>
-   <div class="Main">
+  <div class="Main">
+  <nav id="hamnav">
+    <!-- [THE HAMBURGER] -->
+    <label for="hamburger">&#9776;</label>
+    <input type="checkbox" id="hamburger"/>
+  
+    <!-- [MENU ITEMS] -->
+    <div id="hamitems">
+      <a href="./index.html"><h1 class="fontIndex">Home</h1></a>
+      <a href="./about.html"><h1 class="fontIndex">About</h1></a>
+      <a href="./resume.html"><h1 class="fontIndex">Resume</h1></a>
+      <a href="./portfolio.html"><h1 class="fontIndex">Portfolio</h1></a>
+      <a href="./contact.html"><h1 class="fontIndex">Contact</h1></a>
+    </div>
+  </nav>
+
+   
     <div class="myName indexFont"><h1 class="nameText">Aaron Cook</h1>
     </div>
     <div class="myTitle indexFont"><h1>Web Developer Student</h1></div>
@@ -22,10 +39,10 @@
         <div class="resume shape aniOP"><a href="resume.html"><h2 class="hoverName indexFont">RESUME</h2> <h2 class="hoverLetter indexFont">R</h2></a></div>
         <div class="home shape "><a href="index.html"><h2 class="hoverName indexFont">HOME</h2> <h2 class="hoverLetter indexFont">H</h2></a></div>
         <div class="portfolio shape aniOP"><a href="portfolio.html"><h2 class="hoverName indexFont">PORTFOLIO</h2> <h2 class="hoverLetter indexFont">P</h2></a></div>
-        <div class="contact shape aniOP"><a href="contact.html"><h2 class="hoverName indexFont">CONTACT</h2> <h2 class="hoverLetter indexFont">C</h2></a></div>
-      </ul>
-      
+        <div class="contactNAV shape aniOP"><a href="contact.html"><h2 class="hoverName indexFont">CONTACT</h2> <h2 class="hoverLetter indexFont">C</h2></a></div>
+      </ul>  
   </nav>
 </div>
+
 </body>
 </html>
